[gd_scene load_steps=2 format=3 uid="uid://sk1vdnxmrcal"]

[ext_resource type="Script" path="res://addons/tour/FileSystemDockDebugScreen.gd" id="1_a4tt7"]

[node name="FileSystemDockDebugScreen" type="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_a4tt7")

[node name="HFlowContainer" type="HFlowContainer" parent="."]
layout_mode = 2

[node name="ShowFileSystemButton" type="Button" parent="HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show Dock"

[node name="HighlightAddonsFile" type="Button" parent="HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Highlight Addon file"

[node name="UnlockTree" type="Button" parent="HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Unlock Tree"
